syntax = "proto3";

package tuner;

option go_package = "./grpc/tuner;tuner";

service Tuner {
  rpc RequestEPDInfo(EPDInfoRequest) returns (EPDInfo);
  rpc RequestJob(JobRequest) returns (JobResponse);
  rpc RegisterResult(ResultRequest) returns (ResultAck);
}

message EPDInfoRequest {}

message EPDInfo {
  string filename = 1;
  bytes checksum = 2;
}

message JobRequest {}

message JobResponse {
  string job_uuid = 1;
  int32 epoch = 2;
  int32 start = 3;
  int32 end = 4;
  string checksum = 5;
  repeated double coefficients = 6;
}

message ResultRequest {
  string job_uuid = 1;
  string checksum = 2;
  repeated double gradients = 3;
}

message ResultAck {}
